--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-NACOS_DATAID = 'project-aforo255'
+NACOS_DATAID = 'public'
 NACOS_GROUP='DEFAULT_GROUP'
-NACOS_SERVERADDR='143.198.246.1'
+NACOS_SERVERADDR='146.190.15.39'
 NACOS_PORT=8848
-NACOS_NAMESPACE='aforo255'
+NACOS_NAMESPACE='public'
