--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@datalust/winston-seq": "^1.0.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "kafkajs": "^2.2.3",
     "nacos": "^2.5.0",
     "node-fetch": "^2.6.7",
     "pg": "^8.8.0",
+    "winston": "^3.8.2",
+    "winston-seq": "^0.1.0",
     "zipkin": "^0.22.0",
     "zipkin-instrumentation-express": "^0.22.0",
     "zipkin-transport-http": "^0.22.0"
