--- a/package.json
+++ b/package.json
@@ -17,9 +17,6 @@
     "node-fetch": "^2.6.7",
     "pg": "^8.8.0",
     "winston": "^3.8.2",
-    "winston-seq": "^0.1.0",
-    "zipkin": "^0.22.0",
-    "zipkin-instrumentation-express": "^0.22.0",
-    "zipkin-transport-http": "^0.22.0"
+    "winston-seq": "^0.1.0"
   }
 }
